--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-server": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.1",
+    "@ng-select/ng-select": "^13.4.1",
     "@ngrx/effects": "^17.2.0",
     "@ngrx/entity": "^17.2.0",
     "@ngrx/store": "^17.2.0",
@@ -38,6 +39,7 @@
     "ngx-input-loader": "^0.0.7",
     "ngx-toastr": "^18.0.0",
     "nice-select2": "^2.2.0",
+    "primeng": "^17.18.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
